# $Id$

2008-02-08	Konstantin V. Arkhipov

	* meta/classes/MetaClassProperty.class.php: identifier can be any type
	now.

2008-02-07	Konstantin V. Arkhipov

	* main/DAOs/StorableDAO.class.php: more efficient merge().

2008-02-01	Ivan Y. Khvostishkov

	* main/Net/Mail/Mail.class.php: setSendmailArgs(): used for setting 5th
	argument for mail() function.

2008-01-30	Ivan Y. Khvostishkov

	* main/ProtoBuilders/DTOProto.class.php: validate() and validateList()
	now validate objects recursively.

2008-01-21	Denis M. Gabaidulin

	* core/Base/Assert.class.php: isNotFalse().

	* main/Utils/IO/FileOutputStream.class.php: now throws IOException,
	if stream file resource does not exist.

2008-01-21	Konstantin V. Arkhipov

	* 1.0.1 released.

2008-01-16	Konstantin V. Arkhipov

	* main/DAOs/Workers/BaseDaoWorker.class.php,
	main/DAOs/Workers/NullDaoWorker.class.php: dropById() and dropByIds()
	now returns deleted rows count.

2008-01-16	Ivan Y. Khvostishkov

	* core/Base/Assert.class.php: isLesser(), isGreater(),
	isLesserOrEqual(), isGreaterOrEqual().

2008-01-10	Konstantin V. Arkhipov

	* meta/: configurations without classes are now allowed;
	includes processing now goes before classes.

2008-01-08	Konstantin V. Arkhipov

	* meta/classes/MetaConfiguration.class.php: validation against
	meta.dtd implemented.

	* core/Cache/FileLocker.class.php: added forgotten file dropping in
	drop().

2008-01-07	Konstantin V. Arkhipov

	* main/DAOs/Workers/: getResult() fixed.

	* main/DAOs/Workers/VoodooDaoWorker.class.php: CacheSegmentHandler is
	the default handler now.

	* main/DAOs/Workers/CommonDaoWorker.class.php,
	main/DAOs/Workers/TransparentDaoWorker.class.php: getListByIds() now
	uses CachePeer's getList().

	* core/Cache/: getList() implemented in CachePeer and
	two memcached childs.

	* main/DAOs/Workers/NullDaoWorker.class.php: getListByIds() now
	behaves like in all others DAO workers.

	* main/Utils/ClassUtils.class.php: isClassImplements implemented, to