@@ -1,6 +1,6 @@
 <?php
 /***************************************************************************
- *   Copyright (C) 2006-2007 by Konstantin V. Arkhipov                     *
+ *   Copyright (C) 2006-2008 by Konstantin V. Arkhipov                     *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU Lesser General Public License as        *
@@ -319,12 +319,11 @@
 				// collections
 				$primitiveName = 'identifierList';
 			} elseif ($this->isIdentifier()) {
-				if ($this->getType() instanceof IntegerType)
+				if ($this->getType() instanceof IntegerType) {
 					$primitiveName = 'identifier';
-				else
+					$className = $holder->getName();
+				} else
 					$primitiveName = $this->getType()->getPrimitiveName();
-				
-				$className = $holder->getName();
 			} elseif (
 				!$this->isIdentifier()
 				&& (
